--- a/20190102 for whole dataset.Rmd
+++ b/20190102 for whole dataset.Rmd
@@ -96,13 +96,26 @@ mean(month(data_first_treatment$date)==12)
 mean(month(data_first_treatment$date)<4)
 
 data_first_treatment_12ow <- mutate(data_first_treatment, 
-agecat71018 = cut(data_first_treatment$age, c(0,7,10,18,81), right=FALSE))
+agecat71018 = cut(data_first_treatment$age, c(0,7,10,18,81)))
 
 data_first_treatment_12ow <- mutate(data_first_treatment, 
 agecat1=cut(data_first_treatment$age, seq(0,80,10),labels=c(1:8)))
 
 summary(data_first_treatment_12ow$agecat1)
-table(data_first_treatment_12ow$agecat1,data_first_treatment_12ow$AB_nose_infection)
+table(data_first_treatment_12ow$agecat1, data_first_treatment_12ow$AB_nose_infection)
+summary(data_first_treatment_12ow$agecat71018)
+table(data_first_treatment_12ow$agecat71018, data_first_treatment_12ow$AB_nose_infection)
+
+
+levels(data_first_treatment$type) <- list(
+  no = c(0),
+  amoxicillin = c(1,2),
+  macrolide  = c(3),
+  doxycycline = c(4),
+  others= c(5)
+)
+table(data_first_treatment$type)
+table(data_first_treatment$type_AB_nose)
 
 
 data_first_treatment_12ow <- mutate(data_first_treatment, 
@@ -111,6 +124,7 @@ outcome_weight=ifelse(month(date)==12 & is.na(outcome_4),(31-day(data_first_trea
 data_first_treatment_12ow <- mutate(data_first_treatment, 
 ID=seq.int(nrow(data_first_treatment_12ow)), 
 day=as.numeric(date - dmy(01012014)),
+month = month(date),
 flu_epi=ifelse(week(date) %in% c(5:8, 10,11,49:53),1,0),
 agecat1=cut(data_first_treatment$age, seq(0,80,10),labels=c(1:8)),
 agecat71018 = cut(data_first_treatment$age, c(0,7,10,18,81), right=FALSE),
@@ -125,6 +139,31 @@ data_first_treatment_12ow$season[month(data_first_treatment_12ow$date) %in% c(1,
 data_first_treatment_12ow$season <- factor(data_first_treatment_12ow$season, ordered = TRUE, levels = c("spring", "summer", "autumn", "winter"))
 ```
 str(data_first_treatment_12ow)
+# AB type 2 distribution in a year especially in the first 3 months
+
+table(data_first_treatment_12ow$type_AB_nose, data_first_treatment_12ow$month)
+chisq.test(data_first_treatment_12ow$type_AB_nose, data_first_treatment_12ow$month, correct=FALSE)
+
+chisq.test(data_first_treatment_12ow$type_AB_nose==2, data_first_treatment_12ow$month, correct=FALSE)
+
+chisq.test(data_first_treatment_12ow$type_AB_nose==1, data_first_treatment_12ow$month, correct=FALSE)
+
+
+#plot(AB_nose_infection ~ date, data_first_treatment_12ow)
+#plot(type_AB_nose == 2 ~ date, data_first_treatment_12ow)
+
+
+str(data_first_treatment)
+typepractice <- table(data_first_treatment$type_AB_nose, data_first_treatment$nr_practice)
+write.table(typepractice, file="type in practice.csv", sep = ",")
+
+chisq.test(data_first_treatment_12ow$type_AB_nose, data_first_treatment$nr_practice, correct=FALSE)
+
+chisq.test(data_first_treatment_12ow$type_AB_nose==4, data_first_treatment$nr_practice, correct=FALSE)
+
+
+
+
 #####################
 setwd("P:/NZR/NZR-001/Innovatieve Onderzoeksmethoden/2. Machine learning antibiotica bij ontstekingen/03. Dataverwerking/6. output R/20181221wqi/")
 ### Provide descriptives of all variables
@@ -632,6 +671,22 @@ summary(glm_ab_confounder_nm)
 cbind( exp(coef(glm_ab_confounder_nm)), exp(summary(glm_ab_confounder_nm)$coefficients[,1] - 1.96*summary(glm_ab_confounder_nm)$coefficients[,2]), exp(summary(glm_ab_confounder_nm)$coefficients[,1] + 1.96*summary(glm_ab_confounder_nm)$coefficients[,2]) )
 
 ###########################
+# %% Can we do Propensity score matching with ps seprated by 10 years old?  age->agecat71018
+###########################
+
+## survey
+# model 1
+subset=variable=="value"
+
+
+glm_ab <- svyglm(outcome_4 ~ AB_nose_infection, subset=sex==1, design = design.ps, family=quasibinomial)
+glm_ab1 <- svyglm(outcome_4 ~ AB_nose_infection +  agecat71018,  design = design.ps, family=quasibinomial)
+
+summary(glm_ab1)
+
+
+
+###########################
 # %% Propensity score matching with ps in adults
 
 ###########################
@@ -739,6 +794,79 @@ write.table(ps.balance, file="P:/NZR/NZR-001/Innovatieve Onderzoeksmethoden/2. M
 
 data_confounders_to10 <- mutate(subset(data_confounders_to, age>=10), 
 w10=get.weights(PS_Model10,stop.method = "es.mean" ))
+
+design.ps10 <- svydesign(ids=~1, weights = ~ w10*outcome_weight, data = data_confounders_to10)
+
+
+## survey
+# model 1
+glm_ab10 <- svyglm(outcome_4 ~ AB_nose_infection, design = design.ps10, family=quasibinomial)
+
+summary(glm_ab10)
+
+cbind( exp(coef(glm_ab10)), exp(summary(glm_ab10)$coefficients[,1] - 1.96*summary(glm_ab10)$coefficients[,2]), exp(summary(glm_ab10)$coefficients[,1] + 1.96*summary(glm_ab10)$coefficients[,2]) )
+
+# model 2
+glm_ab10_part <- svyglm(outcome_4 ~ AB_nose_infection + nr_medication, design = design.ps10, family=quasibinomial)
+
+summary(glm_ab10_part)
+
+cbind( exp(coef(glm_ab10_part)), exp(summary(glm_ab10_part)$coefficients[,1] - 1.96*summary(glm_ab10_part)$coefficients[,2]), exp(summary(glm_ab10_part)$coefficients[,1] + 1.96*summary(glm_ab10_part)$coefficients[,2]) )
+
+# model 3
+glm_ab10_confounder <- svyglm(
+as.formula(paste("outcome_4 ~ AB_nose_infection +",paste(vars_confounders,collapse="+"),sep="")), 
+                     design = design.ps10, family=quasibinomial)
+
+summary(glm_ab10_confounder)
+
+cbind( exp(coef(glm_ab10_confounder)), exp(summary(glm_ab10_confounder)$coefficients[,1] - 1.96*summary(glm_ab10_confounder)$coefficients[,2]), exp(summary(glm_ab10_confounder)$coefficients[,1] + 1.96*summary(glm_ab10_confounder)$coefficients[,2]) )
+
+# model 4
+glm_ab10_confounder_nm <- svyglm(
+as.formula(paste("outcome_4 ~ AB_nose_infection +",paste(vars_confounders_nm,collapse="+"),sep="")), 
+                     design = design.ps10, family=quasibinomial)
+
+summary(glm_ab10_confounder_nm)
+
+cbind( exp(coef(glm_ab10_confounder_nm)), exp(summary(glm_ab10_confounder_nm)$coefficients[,1] - 1.96*summary(glm_ab10_confounder_nm)$coefficients[,2]), exp(summary(glm_ab10_confounder_nm)$coefficients[,1] + 1.96*summary(glm_ab10_confounder_nm)$coefficients[,2]) )
+
+
+###########################
+# %% Propensity score matching with ps < 10 years old
+
+###########################
+
+
+data_confounders_to$AB<-0
+data_confounders_to$AB[as.numeric(data_confounders_to$AB_nose_infection)==2]<-1
+
+
+set.seed(1)
+PS_Model10y<-ps(
+  as.formula(paste("AB ~ ",paste(vars_confounders,collapse="+"),sep="")),
+   data = subset(data_confounders_to, age<10),
+  verbose = FALSE, 
+  estimand = "ATE")
+
+plot(PS_Model10y, plots = 1)
+plot(PS_Model10y, plots = 2)
+plot(PS_Model10y, plots = 3)
+plot(PS_Model10y, plots = 4)
+plot(PS_Model10y, plots = 5)
+
+summary(PS_Model10y$gbm.obj,
+        n.trees=PS_Model$desc$ks.mean.ATE$n.trees,
+        plot=TRUE)
+summary(PS_Model10y)
+ps.balance<-bal.table(PS_Model10y)
+ps.balance
+write.table(ps.balance, file="P:/NZR/NZR-001/Innovatieve Onderzoeksmethoden/2. Machine learning antibiotica bij ontstekingen/03. Dataverwerking/6. output R/20181221wqi/ps.balance_ab10.csv", sep = ",")
+
+#write.table(ps.balance, file="H:/qww/AMC/Utrecht/NIVEL/writing/tables/ps.balance_abflu.csv", sep = ",")
+
+data_confounders_to10 <- mutate(subset(data_confounders_to, age>=10), 
+w10=get.weights(PS_Model10y,stop.method = "es.mean" ))
 
 design.ps10 <- svydesign(ids=~1, weights = ~ w10*outcome_weight, data = data_confounders_to10)
 
@@ -1027,6 +1155,16 @@ plot(MNPS_cto_type, plots = 5)
 data_confounders_to$wt <- get.weights(MNPS_cto_type, stop.method = "es.mean")
 
 design.mnps <- svydesign(ids=~1, weights=~wt*outcome_weight, data=data_confounders_to) 
+
+## survey
+# model1
+glm_type <- svyglm(outcome_4 ~ type_AB_nose, by=sex, design = design.mnps,family=quasibinomial)
+
+summary(glm_type)
+
+cbind( exp(coef(glm_type)), exp(summary(glm_type)$coefficients[,1] - 1.96*summary(glm_type)$coefficients[,2]), exp(summary(glm_type)$coefficients[,1] + 1.96*summary(glm_type)$coefficients[,2]) )
+
+
 ## survey
 # model1
 glm_type <- svyglm(outcome_4 ~ type_AB_nose, design = design.mnps,family=quasibinomial)
@@ -1041,16 +1179,14 @@ glm_type_part <- svyglm(outcome_4 ~ type_AB_nose + season + postalcode, design =
 summary(glm_type_part)
 
 cbind( exp(coef(glm_type_part)), exp(summary(glm_type_part)$coefficients[,1] - 1.96*summary(glm_type_part)$coefficients[,2]), exp(summary(glm_type_part)$coefficients[,1] + 1.96*summary(glm_type_part)$coefficients[,2]) )
-
-# model 3
+# model 2.1 np
 glm_type_part_np <- svyglm(outcome_4 ~ type_AB_nose + season, design = design.mnps, family=quasibinomial)
 
 summary(glm_type_part_np)
 
 cbind( exp(coef(glm_type_part_np)), exp(summary(glm_type_part_np)$coefficients[,1] - 1.96*summary(glm_type_part_np)$coefficients[,2]), exp(summary(glm_type_part_np)$coefficients[,1] + 1.96*summary(glm_type_part_np)$coefficients[,2]) )
 
-
-# model 4
+# model 3
 glm_type_confounder <- svyglm(
 as.formula(paste("outcome_4 ~ type_AB_nose +",paste(vars_confounders,collapse="+"),sep="")), 
                      design = design.mnps, family=quasibinomial)
@@ -1059,7 +1195,7 @@ summary(glm_type_confounder)
 
 cbind( exp(coef(glm_type_confounder)), exp(summary(glm_type_confounder)$coefficients[,1] - 1.96*summary(glm_type_confounder)$coefficients[,2]), exp(summary(glm_type_confounder)$coefficients[,1] + 1.96*summary(glm_type_confounder)$coefficients[,2]) )
 
-# model 5
+# model 4
 glm_type_confounder_nm <- svyglm(
 as.formula(paste("outcome_4 ~ type_AB_nose +",paste(vars_confounders_nm,collapse="+"),sep="")), 
                      design = design.mnps, family=quasibinomial)
@@ -1068,7 +1204,7 @@ summary(glm_type_confounder_nm)
 
 cbind( exp(coef(glm_type_confounder_nm)), exp(summary(glm_type_confounder_nm)$coefficients[,1] - 1.96*summary(glm_type_confounder_nm)$coefficients[,2]), exp(summary(glm_type_confounder_nm)$coefficients[,1] + 1.96*summary(glm_type_confounder_nm)$coefficients[,2]) )
 
-
+#agecat71018
 ###########################ctor
 # %% running of multinomial propensity scores in adults
 ###########################
@@ -1092,7 +1228,7 @@ summary(MNPS_cto_type18$gbm.obj,
 summary(MNPS_cto_type18)
 mnp.balance18<-bal.table(MNPS_cto_type18)
 mnp.balance18
-write.table(mnp.balance, file="P:/NZR/NZR-001/Innovatieve Onderzoeksmethoden/2. Machine learning antibiotica bij ontstekingen/03. Dataverwerking/6. output R/20181221wqi/mnp.balance_type18.csv", sep = ",")
+write.table(mnp.balance18, file="P:/NZR/NZR-001/Innovatieve Onderzoeksmethoden/2. Machine learning antibiotica bij ontstekingen/03. Dataverwerking/6. output R/20190102wqi/mnp.balance_type18.csv", sep = ",")
 
 #write.table(mnp.balance, file="H:/qww/AMC/Utrecht/NIVEL/writing/tables/mnps.balance_typeflu.csv", sep = ",")
 
@@ -1110,6 +1246,43 @@ wt18=get.weights(MNPS_cto_type18,stop.method = "es.mean" ))
 
 design.mnps18 <- svydesign(ids=~1, weights = ~ wt18*outcome_weight, data = data_confounders_to18)
 
+#Multivariate Imputation by Chained Equations
+confounders_mi<-mice(data_confounders, m=5,seed = 1234)
+confounders_mi18<-mice(subset(data_confounders, age>=18), m=5,seed = 1234)
+
+densityplot(confounders_mi)
+confounders_mi$loggedEvents
+confounders_mi18$loggedEvents
+
+pred <- make.predictorMatrix(data_confounders, age>=18)
+pred18 <- make.predictorMatrix(subset(data_confounders, age>=18))
+
+pred18[c("nr_contacts_resp", "postalcode"), c("nr_contacts_resp", "postalcode")] <- 0
+pred18[c("nr_prescriptions_AB", "postalcode"), c("nr_prescriptions_AB", "postalcode")] <- 0
+pred18[c("nr_contacts_infection", "postalcode"), c("nr_contacts_infection", "postalcode")] <- 0
+
+pred18
+mi<-mice(subset(data_confounders, age>=18),pred=pred18, m=5,seed = 1234)
+class(mi)
+
+data_confounders_mi18<-mi$data
+class(data_confounders_mi18)
+
+
+data_confounders_mi_to18 <-merge(data_confounders_mi18,subset(data_confounders_to, age>=18)[,c("outcome_4","AB_nose_infection","type_AB_nose", "outcome_weight", "ID")], by="ID")
+
+data_confounders_mi_to18 <- mutate(data_confounders_mi_to18, 
+wt18=get.weights(MNPS_cto_type18,stop.method = "es.mean" ))
+
+#design.mnps18_mi<-with(mi, svydesign(ids=~1, weights = ~ wt18*outcome_weight))
+
+design.mnps18_mi <- svydesign(ids=~1, weights = ~ wt18*outcome_weight, data = data_confounders_mi_to18)
+  
+#design.mnps18_mi_pooled<-pool(design.mnps18_mi)
+#summary(design.mnps18_mi_pooled)
+
+
+
 ## survey
 # model1
 glm_type18 <- svyglm(outcome_4 ~ type_AB_nose, design = design.mnps18,family=quasibinomial)
@@ -1119,19 +1292,35 @@ summary(glm_type18)
 cbind( exp(coef(glm_type18)), exp(summary(glm_type18)$coefficients[,1] - 1.96*summary(glm_type18)$coefficients[,2]), exp(summary(glm_type18)$coefficients[,1] + 1.96*summary(glm_type18)$coefficients[,2]) )
 
 # model 2
-glm_type18_part <- svyglm(outcome_4 ~ type_AB_nose + season + postalcode, design = design.mnps18, family=quasibinomial)
+glm_type18_part <- svyglm(outcome_4 ~ type_AB_nose + season + postalcode + hartfalen_morb + nr_prescriptions_AB + nr_contacts_infection + poor_immune_response + nr_medication + COPD_morb + migraine_morb + sex, design = design.mnps18, family=quasibinomial)
 
 summary(glm_type18_part)
 
 cbind( exp(coef(glm_type18_part)), exp(summary(glm_type18_part)$coefficients[,1] - 1.96*summary(glm_type18_part)$coefficients[,2]), exp(summary(glm_type18_part)$coefficients[,1] + 1.96*summary(glm_type18_part)$coefficients[,2]) )
 
+# model 2.1 Multivariate Imputation
 
-# model 3
-glm_type18_part_np <- svyglm(outcome_4 ~ type_AB_nose + season, design = design.mnps18, family=quasibinomial)
+glm_type18_part_mi <- svyglm(outcome_4 ~ type_AB_nose + season + postalcode + hartfalen_morb + nr_prescriptions_AB + nr_contacts_infection + poor_immune_response + nr_medication + COPD_morb + migraine_morb + sex, design = design.mnps18_mi, family=quasibinomial)
 
-summary(glm_type18_part_np )
+summary(glm_type18_part_mi)
 
-cbind( exp(coef(glm_type18_part_np )), exp(summary(glm_type18_part_np )$coefficients[,1] - 1.96*summary(glm_type18_part_np )$coefficients[,2]), exp(summary(glm_type18_part_np )$coefficients[,1] + 1.96*summary(glm_type18_part_np )$coefficients[,2]) )
+cbind( exp(coef(glm_type18_part_mi)), exp(summary(glm_type18_part_mi)$coefficients[,1] - 1.96*summary(glm_type18_part_mi)$coefficients[,2]), exp(summary(glm_type18_part_mi)$coefficients[,1] + 1.96*summary(glm_type18_part_mi)$coefficients[,2]) )
+
+
+# model 2.2 no postalcode
+glm_type18_part_np <- svyglm(outcome_4 ~ type_AB_nose + season + hartfalen_morb + nr_prescriptions_AB + nr_contacts_infection + poor_immune_response + nr_medication + COPD_morb + migraine_morb + sex, design = design.mnps18, family=quasibinomial)
+
+summary(glm_type18_part_np)
+
+cbind( exp(coef(glm_type18_part_np)), exp(summary(glm_type18_part_np)$coefficients[,1] - 1.96*summary(glm_type18_part_np)$coefficients[,2]), exp(summary(glm_type18_part_np)$coefficients[,1] + 1.96*summary(glm_type18_part_np)$coefficients[,2]) )
+
+# model 2.3 Multivariate Imputation & no postalcode
+
+glm_type18_part_mi_np <- svyglm(outcome_4 ~ type_AB_nose + season + hartfalen_morb + nr_prescriptions_AB + nr_contacts_infection + poor_immune_response + nr_medication + COPD_morb + migraine_morb + sex, design = design.mnps18_mi, family=quasibinomial)
+
+summary(glm_type18_part_mi_np)
+
+cbind( exp(coef(glm_type18_part_mi_np)), exp(summary(glm_type18_part_mi_np)$coefficients[,1] - 1.96*summary(glm_type18_part_mi_np)$coefficients[,2]), exp(summary(glm_type18_part_mi_np)$coefficients[,1] + 1.96*summary(glm_type18_part_mi_np)$coefficients[,2]) )
 
 # model 3
 glm_type18_confounder <- svyglm(
@@ -1174,7 +1363,7 @@ summary(MNPS_cto_type10$gbm.obj,
 summary(MNPS_cto_type10)
 mnp.balance10<-bal.table(MNPS_cto_type10)
 mnp.balance10
-write.table(mnp.balance, file="P:/NZR/NZR-001/Innovatieve Onderzoeksmethoden/2. Machine learning antibiotica bij ontstekingen/03. Dataverwerking/6. output R/20181221wqi/mnp.balance_type10.csv", sep = ",")
+write.table(mnp.balance10, file="P:/NZR/NZR-001/Innovatieve Onderzoeksmethoden/2. Machine learning antibiotica bij ontstekingen/03. Dataverwerking/6. output R/20190102wqi/mnp.balance_type10.csv", sep = ",")
 
 #write.table(mnp.balance, file="H:/qww/AMC/Utrecht/NIVEL/writing/tables/mnps.balance_typeflu.csv", sep = ",")
 
@@ -1201,20 +1390,19 @@ summary(glm_type10)
 cbind( exp(coef(glm_type10)), exp(summary(glm_type10)$coefficients[,1] - 1.96*summary(glm_type10)$coefficients[,2]), exp(summary(glm_type10)$coefficients[,1] + 1.96*summary(glm_type10)$coefficients[,2]) )
 
 # model 2
-glm_type10_part <- svyglm(outcome_4 ~ type_AB_nose + season + postalcode, design = design.mnps10, family=quasibinomial)
+glm_type10_part <- svyglm(outcome_4 ~ type_AB_nose + hartfalen_morb + postalcode, design = design.mnps10, family=quasibinomial)
 
 summary(glm_type10_part)
 
 cbind( exp(coef(glm_type10_part)), exp(summary(glm_type10_part)$coefficients[,1] - 1.96*summary(glm_type10_part)$coefficients[,2]), exp(summary(glm_type10_part)$coefficients[,1] + 1.96*summary(glm_type10_part)$coefficients[,2]) )
-
-# model 3
-glm_type10_part_np <- svyglm(outcome_4 ~ type_AB_nose + season, design = design.mnps10, family=quasibinomial)
+# model 2.1 no postalcode
+glm_type10_part_np <- svyglm(outcome_4 ~ type_AB_nose + hartfalen_morb , design = design.mnps10, family=quasibinomial)
 
 summary(glm_type10_part_np)
 
 cbind( exp(coef(glm_type10_part_np)), exp(summary(glm_type10_part_np)$coefficients[,1] - 1.96*summary(glm_type10_part_np)$coefficients[,2]), exp(summary(glm_type10_part_np)$coefficients[,1] + 1.96*summary(glm_type10_part_np)$coefficients[,2]) )
 
-# model 4
+# model 3
 glm_type10_confounder <- svyglm(
 as.formula(paste("outcome_4 ~ type_AB_nose +",paste(vars_confounders,collapse="+"),sep="")), 
                      design = design.mnps10, family=quasibinomial)
@@ -1223,7 +1411,7 @@ summary(glm_type10_confounder)
 
 cbind( exp(coef(glm_type10_confounder)), exp(summary(glm_type10_confounder)$coefficients[,1] - 1.96*summary(glm_type10_confounder)$coefficients[,2]), exp(summary(glm_type10_confounder)$coefficients[,1] + 1.96*summary(glm_type10_confounder)$coefficients[,2]) )
 
-# model 5
+# model 4
 glm_type10_confounder_nm <- svyglm(
 as.formula(paste("outcome_4 ~ type_AB_nose +",paste(vars_confounders_nm,collapse="+"),sep="")), 
                      design = design.mnps10, family=quasibinomial)
@@ -1256,7 +1444,7 @@ MNPS_cto_type7 <- mnps(
 #summary(MNPS_cto_type7)
 mnp.balance7<-bal.table(MNPS_cto_type7)
 #mnp.balance7
-write.table(mnp.balance, file="P:/NZR/NZR-001/Innovatieve Onderzoeksmethoden/2. Machine learning antibiotica bij ontstekingen/03. Dataverwerking/6. output R/20181221wqi/mnp.balance_type7.csv", sep = ",")
+write.table(mnp.balance7, file="P:/NZR/NZR-001/Innovatieve Onderzoeksmethoden/2. Machine learning antibiotica bij ontstekingen/03. Dataverwerking/6. output R/20190102wqi/mnp.balance_type7.csv", sep = ",")
 
 #write.table(mnp.balance, file="H:/qww/AMC/Utrecht/NIVEL/writing/tables/mnps.balance_typeflu.csv", sep = ",")
 
@@ -1283,21 +1471,19 @@ summary(glm_type7)
 cbind( exp(coef(glm_type7)), exp(summary(glm_type7)$coefficients[,1] - 1.96*summary(glm_type7)$coefficients[,2]), exp(summary(glm_type7)$coefficients[,1] + 1.96*summary(glm_type7)$coefficients[,2]) )
 
 # model 2
-glm_type7_part <- svyglm(outcome_4 ~ type_AB_nose + season + postalcode, design = design.mnps7, family=quasibinomial)
+glm_type7_part <- svyglm(outcome_4 ~ type_AB_nose + season +hartfalen_morb + postalcode, design = design.mnps7, family=quasibinomial)
 
 summary(glm_type7_part)
 
 cbind( exp(coef(glm_type7_part)), exp(summary(glm_type7_part)$coefficients[,1] - 1.96*summary(glm_type7_part)$coefficients[,2]), exp(summary(glm_type7_part)$coefficients[,1] + 1.96*summary(glm_type7_part)$coefficients[,2]) )
-
-
-# model 3
-glm_type7_part_np <- svyglm(outcome_4 ~ type_AB_nose + season, design = design.mnps7, family=quasibinomial)
+# model 2.1 no postalcode
+glm_type7_part_np <- svyglm(outcome_4 ~ type_AB_nose + season +hartfalen_morb, design = design.mnps7, family=quasibinomial)
 
 summary(glm_type7_part_np)
 
 cbind( exp(coef(glm_type7_part_np)), exp(summary(glm_type7_part_np)$coefficients[,1] - 1.96*summary(glm_type7_part_np)$coefficients[,2]), exp(summary(glm_type7_part_np)$coefficients[,1] + 1.96*summary(glm_type7_part_np)$coefficients[,2]) )
 
-# model 4
+# model 3
 glm_type7_confounder <- svyglm(
 as.formula(paste("outcome_4 ~ type_AB_nose +",paste(vars_confounders,collapse="+"),sep="")), 
                      design = design.mnps7, family=quasibinomial)
@@ -1306,7 +1492,7 @@ summary(glm_type7_confounder)
 
 cbind( exp(coef(glm_type7_confounder)), exp(summary(glm_type7_confounder)$coefficients[,1] - 1.96*summary(glm_type7_confounder)$coefficients[,2]), exp(summary(glm_type7_confounder)$coefficients[,1] + 1.96*summary(glm_type7_confounder)$coefficients[,2]) )
 
-# model 5
+# model 4
 glm_type7_confounder_nm <- svyglm(
 as.formula(paste("outcome_4 ~ type_AB_nose +",paste(vars_confounders_nm,collapse="+"),sep="")), 
                      design = design.mnps7, family=quasibinomial)
@@ -1321,7 +1507,7 @@ cbind( exp(coef(glm_type7_confounder_nm)), exp(summary(glm_type7_confounder_nm)$
 # ITE
 # %% synthetic random forest
 ###########################
-
+setwd("P:/NZR/NZR-001/Innovatieve Onderzoeksmethoden/2. Machine learning antibiotica bij ontstekingen/03. Dataverwerking/6. output R/20190102wqi/")
 ### treatment using subset data with only no treatment AB 
 AB_0 <- data_first_treatment_12ow_relevant_0.4%>% filter (type_AB_nose == 0) ## control
 
@@ -1408,10 +1594,10 @@ fit_npm_delta
   table_AB_npm = data.frame(variable_npm, coef_npm, p_value_npm)
   write.csv(table_AB_npm, file='fit_npm_delta.csv')    
   
-
-anova(fit,fit_np)
+#anova(fit,fit_np,fit_nm,fit_npm,test="Chisq")
+#anova(fit,fit_np)
 #anova(fit,fit_nm,test="Chisq")
-anova(fit_nm,fit_nmp)
+#anova(fit_nm,fit_nmp)
 
 ###loop for type 1-5
 
@@ -1423,7 +1609,7 @@ for (j in 1:5) {
   as.formula(paste("outcome_4 ~ ", paste(vars_confounders, collapse="+"),sep="")),
   data  = AB_j)
   
-  pred.Syn_type_j <- rfsrcSyn(object = regF_j, newdata = data_first_treatment_12ow_relevant_0.4)
+  pred.Syn_type_j <- rfsrcSyn(object = regF_j, na.action = "na.impute", newdata = data_first_treatment_12ow_relevant_0.4)
   # calculate difference
   data_first_treatment_12ow_relevant_0.4$delta_j <- (pred.Syn_type_j$rfSynPred$predicted -  pred.Syn_type_0$rfSynPred$predicted)[,2]
   
@@ -1454,14 +1640,14 @@ for (j in 1:5) {
 
 
 # PRIM with delta coming from binary AB
-PRIM <- subset(data_first_treatment_12ow_relevant_0.4, select = c(age, sex, nr_medication,COPD_morb, migraine_morb, nr_contacts_resp, osteop_morb,poor_immune_response, alcmisb_morb,practice_size, Depressie_morb,aangaf_morb,hartfalen_morb,flu_epi,season,postalcode, nr_contacts_infection, nr_prescriptions_AB, day, delta))
+PRIM <- subset(data_first_treatment_12ow_relevant_0.4, select = c(age, sex, nr_medication,COPD_morb, migraine_morb, nr_contacts_resp, osteop_morb,poor_immune_response, alcmisb_morb,practice_size, Depressie_morb,aangaf_morb,hartfalen_morb,flu_epi,season,postalcode, nr_contacts_infection, nr_prescriptions_AB, delta,ID))
 
 prim.table<-data.frame(matrix(ncol=(6)))
 colnames(prim.table)<-c("alpha","beta","number_cov","rule_cov","number_div","rule_div")
 
 set.seed(1234)
 
-for (i in 1:10){
+for (i in 5:10){
   alpha<-i/100
   for (j in 1:10){
     beta<-j/100
@@ -1471,6 +1657,7 @@ for (i in 1:10){
                                           plot= FALSE, 
                                           optimal.box= "2se")
     rule_cov<-p.cov$covers[[1]]$superrule
+    #summary(p.cov)
     p.div <- prim.diversify(delta ~ .,
                                       data = PRIM,
                                       n = 4,
@@ -1479,21 +1666,33 @@ for (i in 1:10){
                                       plot = FALSE,
                                       optimal.box = "2se")
     rule_div<-p.div$attempts[[1]]$superrule
+   # summary(p.div)
     
     prim.table[10*i+j-10,]<-c(alpha,beta,length(rule_cov),toString(rule_cov),length(rule_div),toString(rule_div))
     
   }
 }
+ 
+ #Error in combn(1:nr.of.attempts, 2) : n < m
+ 
+write.csv(prim.table, file='prim.table.csv')  
 
+  p.cov<-subgroup.discovery::prim.cover(delta~., data = PRIM,
+                                          peeling.quantile=0.05,
+                                          min.support=0.1, 
+                                          plot= TRUE, 
+                                          optimal.box= "2se")
+    rule_cov<-p.cov$covers[[1]]$superrule
+    summary(p.cov)
 # PRIM with delta coming from binary AB without postalcode
-PRIM_np <- subset(data_first_treatment_12ow_relevant_0.4, select = c(age, sex, nr_medication,COPD_morb, migraine_morb, nr_contacts_resp, osteop_morb,poor_immune_response, alcmisb_morb,practice_size, Depressie_morb,aangaf_morb,hartfalen_morb,flu_epi,season, nr_contacts_infection, nr_prescriptions_AB, delta))
+PRIM_np <- subset(data_first_treatment_12ow_relevant_0.4, select = c(age, sex, nr_medication,COPD_morb, migraine_morb, nr_contacts_resp, osteop_morb,poor_immune_response, alcmisb_morb,practice_size, Depressie_morb,aangaf_morb,hartfalen_morb,flu_epi,season, nr_contacts_infection, nr_prescriptions_AB, delta, ID))
 
 prim.table_np<-data.frame(matrix(ncol=(6)))
 colnames(prim.table_np)<-c("alpha","beta","number_cov","rule_cov","number_div","rule_div")
 
 set.seed(1234)
 
-for (i in 1:10){
+for (i in 5:10){
   alpha<-i/100
   for (j in 1:10){
     beta<-j/100
@@ -1516,6 +1715,56 @@ for (i in 1:10){
     
   }
 }
+write.csv(prim.table_np, file='prim.table_np.csv')  
+
+ p.cov<-subgroup.discovery::prim.cover(delta~., data = PRIM_np,
+                                          peeling.quantile=0.1,
+                                          min.support=0.1, 
+                                          plot= TRUE, 
+                                          optimal.box= "2se")
+    rule_cov<-p.cov$covers[[1]]$superrule
+summary(p.cov)
+# PRIM with - delta coming from binary AB without postalcode  
+PRIM_np <- subset(data_first_treatment_12ow_relevant_0.4, select = c(age, sex, nr_medication,COPD_morb, migraine_morb, nr_contacts_resp, osteop_morb,poor_immune_response, alcmisb_morb,practice_size, Depressie_morb,aangaf_morb,hartfalen_morb,flu_epi,season, nr_contacts_infection, nr_prescriptions_AB, delta, ID))
+
+prim.table_np<-data.frame(matrix(ncol=(6)))
+colnames(prim.table_np)<-c("alpha","beta","number_cov","rule_cov","number_div","rule_div")
+
+set.seed(1234)
+
+for (i in 5:10){
+  alpha<-i/100
+  for (j in 1:10){
+    beta<-j/100
+    p.cov<-subgroup.discovery::prim.cover(-delta~., data = PRIM_np,
+                                          peeling.quantile=alpha,
+                                          min.support=beta, 
+                                          plot= FALSE, 
+                                          optimal.box= "2se")
+    rule_cov<-p.cov$covers[[1]]$superrule
+    p.div <- prim.diversify(delta ~ .,
+                                      data = PRIM_np,
+                                      n = 4,
+                                      peeling.quantile = alpha,
+                                      min.support = beta,
+                                      plot = FALSE,
+                                      optimal.box = "2se")
+    rule_div<-p.div$attempts[[1]]$superrule
+    
+    prim.table_np[10*i+j-10,]<-c(alpha,beta,length(rule_cov),toString(rule_cov),length(rule_div),toString(rule_div))
+    
+  }
+}
+write.csv(prim.table_np, file='prim.table_np.csv')  
+
+ p.cov<-subgroup.discovery::prim.cover(delta~., data = PRIM_np,
+                                          peeling.quantile=0.1,
+                                          min.support=0.1, 
+                                          plot= TRUE, 
+                                          optimal.box= "2se")
+    rule_cov<-p.cov$covers[[1]]$superrule
+summary(p.cov)
+
 
 # PRIM with delta coming from binary AB without NA variables:  nr_contacts_resp,nr_contacts_infection, nr_prescriptions_AB
 PRIM_nm <- subset(data_first_treatment_12ow_relevant_0.4, select = c(age, sex, nr_medication,COPD_morb, migraine_morb, osteop_morb,poor_immune_response, alcmisb_morb,practice_size, Depressie_morb,aangaf_morb,hartfalen_morb,flu_epi,season,postalcode,  delta))
@@ -1548,6 +1797,7 @@ for (i in 1:10){
     
   }
 }
+write.csv(prim.table_nm, file='prim.table_nm.csv')  
 
 # PRIM with delta coming from binary AB without postalcode & NA variables:  nr_contacts_resp,nr_contacts_infection, nr_prescriptions_AB,postalcode
 PRIM_npm <- subset(data_first_treatment_12ow_relevant_0.4, select = c(age, sex, nr_medication,COPD_morb, migraine_morb, osteop_morb,poor_immune_response, alcmisb_morb,practice_size, Depressie_morb,aangaf_morb,hartfalen_morb,flu_epi,season, delta))
@@ -1580,6 +1830,7 @@ for (i in 1:10){
     
   }
 }
+write.csv(prim.table_npm, file='prim.table_npm.csv') 
 
 # PRIM with delta coming from  AB TYPE 0 VS 1
 PRIM_1 <- subset(data_first_treatment_12ow_relevant_0.4, select = c(age, sex, nr_medication,COPD_morb, migraine_morb, nr_contacts_resp, osteop_morb,poor_immune_response, alcmisb_morb,practice_size, Depressie_morb,aangaf_morb,hartfalen_morb,flu_epi,season,postalcode, nr_contacts_infection, nr_prescriptions_AB, delta_1))
@@ -1612,6 +1863,7 @@ for (i in 1:10){
     
   }
 }
+write.csv(prim.table_1, file='prim.table_1.csv') 
 
 # PRIM with delta coming from  AB TYPE 0 VS 2
 PRIM_2 <- subset(data_first_treatment_12ow_relevant_0.4, select = c(age, sex, nr_medication,COPD_morb, migraine_morb, nr_contacts_resp, osteop_morb,poor_immune_response, alcmisb_morb,practice_size, Depressie_morb,aangaf_morb,hartfalen_morb,flu_epi,season,postalcode, nr_contacts_infection, nr_prescriptions_AB,delta_2))
@@ -1644,6 +1896,7 @@ for (i in 1:10){
     
   }
 }
+write.csv(prim.table_2, file='prim.table_2.csv') 
 
 # PRIM with delta coming from  AB TYPE 0 VS 3
 PRIM_3 <- subset(data_first_treatment_12ow_relevant_0.4, select = c(age, sex, nr_medication,COPD_morb, migraine_morb, nr_contacts_resp, osteop_morb,poor_immune_response, alcmisb_morb,practice_size, Depressie_morb,aangaf_morb,hartfalen_morb,flu_epi,season,postalcode, nr_contacts_infection, nr_prescriptions_AB,delta_3))
@@ -1676,6 +1929,7 @@ for (i in 1:10){
     
   }
 }
+write.csv(prim.table_3, file='prim.table_3.csv') 
 
 # PRIM with delta coming from  AB TYPE 0 VS 4
 PRIM_4 <- subset(data_first_treatment_12ow_relevant_0.4, select = c(age, sex, nr_medication,COPD_morb, migraine_morb, nr_contacts_resp, osteop_morb,poor_immune_response, alcmisb_morb,practice_size, Depressie_morb,aangaf_morb,hartfalen_morb,flu_epi,season,postalcode, nr_contacts_infection, nr_prescriptions_AB, delta_4))
@@ -1709,12 +1963,108 @@ for (i in 1:10){
   }
 }
 
+write.csv(prim.table_4, file='prim.table_4.csv') 
+
+ 
+memory.limit() 
+memory.limit(size=30000)
+
+risk_data1<-data.frame(matrix(ncol=20))
+colnames(risk_data1)<-colnames(PRIM)
+
+rule1<-p.cov$covers[[1]]$superrule
+
+myString1 <- paste("subset(PRIM,", 
+                    paste(gsub(',','&', toString(rule1)), 
+                          "& ID)"
+                    ))     # this will glue three strings together
+# a is the subset of dagang that follow the rule
+
+a1<-eval(parse(text=myString1))  # now we tell R to look at the string as a command and execute it
+#risk_data1<-rbind(a,risk_data)
+
+   PRIM$interst<- ifelse(PRIM$ID %in% a1$ID,1,0) 
+  
+  interest<-mutate(PRIM,     
+  ifelse(PRIM$ID %in% a1$ID,1,0))
 
 
 
 
+#Prevalence of the original population
+m_average<-mean(PRIM$delta,na.rm=TRUE)
+
+####put different rules into subset automatically & put the string of rule into a vector
+#prim.table.r<-read.csv(file = "F:/博士/pumc/课题???/AMC/Utrecht/NIVEL/Thamar/20190102/prim.table.csv")
+#prim.table.r_np<-read.csv(file = "H:/qww/AMC/Utrecht/NIVEL/Thamar/20190102/prim.table.csv")
+
+#Prevalence and coverage !!!!!
+for (i in 1:93){
+  
+  myString <- paste("subset(PRIM,", 
+                    paste(gsub(',','&',prim.table$rule_cov[i]), 
+                          ")"
+                    ))# this will glue three strings together
+  
+  a<-eval(parse(text=myString))  # now we tell R to look at the string as a command and execute it
+  
+  PRIM$box<- ifelse(PRIM$ID %in% a$ID,1,0) 
+ 
+  PRIM[,ncol(PRIM)+1]<-PRIM$box
+  names(PRIM)[ncol(PRIM)]<-paste0("box_",i)
+  
+  m_delta<-sum(subset(PRIM, box==1)$delta, na.rm=TRUE)/nrow(a)
+  
+  prim.table$m_delta[i]<-m_delta
+  
+  betat <-nrow(a)/nrow(PRIM)
+  prim.table$betat[i]<- betat
+  
+  prim.table$coverage1[i]<-(m_delta-m_average)*betat
+  prim.table$coverage2[i]<-(m_average-m_delta)*betat
+  
+  write.csv( prim.table, file='prim.table_coverage.csv')
+  
+}
 
 
 
+#prim.table.r_np<-read.csv(file = "H:/qww/AMC/Utrecht/NIVEL/Thamar/20190102/prim.table_np.csv")
 
+#Prevalence and coverage !!!!!
+for (i in 41:100){
+  
+  myString <- paste("subset(PRIM_np,", 
+                    paste(gsub(',','&',prim.table_np$rule_cov[i]), 
+                          ")"
+                    ))# this will glue three strings together
+  
+  a<-eval(parse(text=myString))  # now we tell R to look at the string as a command and execute it
+  
+  PRIM_np$box<- ifelse(PRIM_np$ID %in% a$ID,1,0) 
+  
+  PRIM_np[,ncol(PRIM_np)+1]<-PRIM_np$box
+  names(PRIM_np)[ncol(PRIM_np)]<-paste0("box_",i)
+  
+  m_delta<-sum(subset(PRIM_np, box==1)$delta,na.rm=TRUE)/nrow(a)
+  
+  prim.table_np$m_delta[i]<-m_delta
+  
+  betat <-nrow(a)/nrow(PRIM_np)
+  prim.table_np$betat[i]<- betat
+  
+  prim.table_np$coverage1[i]<-(m_delta-m_average)*betat
+  prim.table_np$coverage2[i]<-(m_average-m_delta)*betat
+  
+  write.csv( prim.table_np, file='prim.table_np_coverage.csv')
+  
+}
+
+
+fit <- glm(
+  as.formula(paste("delta ~ ", paste(names(select(PRIM,-delta)), collapse="+"),sep="")),
+  data  = PRIM, family = gaussian)
+
+fit_delta<- summary(fit)
+fit_delta
 
